--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,20 @@
 <resources>
     <string name="app_name">Money Manager</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_wallet">Wallets</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_activity_wallet">WalletActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="start_balance">Start balance</string>
+    <string name="insert_start_balance">Please enter a start balance.</string>
+    <string name="insert_name">Please enter a name.</string>
+    <string name="insert_numbers">Please enter a valid amount.</string>
+    <string name="name">Name</string>
+
+    <string name="title_activity_wallet">WalletActivity</string>
+    <string name="total" formatted="false">Total: %s</string>
+    <string-array name="currencies">
+        <item>EUR</item>
+        <item>USD</item>
+    </string-array>
 </resources>
